b-ground resize bug and nav bar z-index bug fixed

--- a/src/styling-eventzilla/form.css
+++ b/src/styling-eventzilla/form.css
@@ -15,7 +15,7 @@
   display: grid;
   grid-template-rows: auto 1fr auto;
   justify-content: center;
-  margin: 200px 0;
+  margin: 140px 0;
   overflow: wrap;
 }
 form {
@@ -39,7 +39,7 @@ form {
 }
 .group2 {
   font-size: 1em;
-  margin: 1em 0.75em;
+  margin: 0.75em;
   text-align: left;
   float: left;
 }
