--- a/src/styling-eventzilla/nav.css
+++ b/src/styling-eventzilla/nav.css
@@ -18,6 +18,7 @@ label {
 }
 .menu {
   position: absolute;
+  z-index: 5;
   top: 0;
   left: 0;
   background: #282526;
